examples/test/testpolicy15415.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15415
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key34: value32
      key0: value4
      key12: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value40
          key3: value7
          key28: value17
      podSelector:
        matchLabels:
          key49: value2
